# defects4j-analysis

./: .gitignore  README.md  README_DEV.md  pyproject.toml  requirements.txt
.cursor/rules/: defects4j-reference.mdc
docs/: extractor_readme.md
examples/: basic_usage.py
scripts/: dev.py  extract_sample.sh  setup.sh
server/: README.md  main.py  requirements.txt
server/static/: index.html
src/: defects4j_extractor.py
src/defects4j_extractor/: __init__.py  cli.py  defects4j.py  extractor.py  models.py  parser.py
